<resources>
    <string name="app_name">Chess Clock</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="h">H</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="start">Start</string>
    <string name="error">Error</string>
    <string name="same_as_white">Same as white</string>
    <string name="from">from</string>
    <string name="company_name">ZineddineBtc</string>
    <string name="reset_caps">RESET</string>
</resources>
